--- a/index.html
+++ b/index.html
@@ -1317,7 +1317,7 @@
             <li><a href="#features">Features</a></li>
             <li><a href="#how-it-works">How It Works</a></li>
             <li><a href="#privacy">Privacy</a></li>
-            <li><a href="/cdn-cgi/l/email-protection#67060b0200080b27000a060e0b4904080a581412050d0204135a20150816250806150342555734121717081513">Contact</a></li>
+            <li><a href="mailto:alegol@gmail.com?subject=GroqBoard%20Support">Contact</a></li>
         </ul>
         <a href="https://play.google.com/store/apps/details?id=com.alegol.groqboard" class="nav-cta" target="_blank">Get the App</a>
         <button class="mobile-menu-btn">☰</button>
@@ -1687,8 +1687,8 @@
                 <p class="footer-credit">Version 2.0</p>
             </div>
             <div class="footer-links">
-                <a href="https://ottmc.com/privacy/privacy_policy.html" target="_blank">Privacy Policy</a>
-                <a href="/cdn-cgi/l/email-protection#debfb2bbb9b1b29eb9b3bfb7b2f0bdb1b3e1adabbcb4bbbdaae399acb1af9cb1bfacbafbecee8dabaeaeb1acaa">Support</a>
+                <a href="privacy.html">Privacy Policy</a>
+                <a href="mailto:alegol@gmail.com?subject=GroqBoard%20Support">Support</a>
                 <a href="https://console.groq.com" target="_blank">Get API Key</a>
             </div>
         </div>
@@ -1697,7 +1697,7 @@
         </div>
     </footer>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+    <script>
         // Smooth scroll for anchor links
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
@@ -1778,4 +1778,12 @@
         const screenshotsTrack = document.querySelector('.screenshots-track');
         if (screenshotsTrack) {
             screenshotsTrack.addEventListener('mouseenter', () => {
-                screenshotsTrack.style.
+                screenshotsTrack.style.animationPlayState = 'paused';
+            });
+            screenshotsTrack.addEventListener('mouseleave', () => {
+                screenshotsTrack.style.animationPlayState = 'running';
+            });
+        }
+    </script>
+</body>
+</html>
