--- a/index.html
+++ b/index.html
@@ -590,17 +590,14 @@
         .watch-body {
             position: relative;
             z-index: 2;
-            display: flex;
-            justify-content: center;
-            align-items: center;
         }
 
         /* Crown (top button - rotating dial) */
         .watch-crown {
             position: absolute;
-            right: -12px;
+            right: 8px;
             top: 50%;
-            margin-top: -45px;
+            transform: translateY(-80%);
             width: 10px;
             height: 35px;
             background: linear-gradient(90deg, #1a1a1a 0%, #3d3d3d 20%, #4a4a4a 50%, #3d3d3d 80%, #2a2a2a 100%);
@@ -631,9 +628,9 @@
         /* Push button (bottom - smaller, rounder) */
         .watch-push-button {
             position: absolute;
-            right: -10px;
+            right: 10px;
             top: 50%;
-            margin-top: 5px;
+            transform: translateY(20%);
             width: 8px;
             height: 20px;
             background: linear-gradient(90deg, #1a1a1a 0%, #3d3d3d 20%, #4a4a4a 50%, #3d3d3d 80%, #2a2a2a 100%);
@@ -648,10 +645,23 @@
             height: 300px;
             border-radius: 50%;
             object-fit: cover;
-            box-shadow: 
-                0 30px 70px rgba(0, 0, 0, 0.6),
-                0 0 0 3px #222;
             display: block;
+        }
+
+        /* Watch bezel frame */
+        .watch-bezel {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            border-radius: 50%;
+            border: 12px solid #2d2d2d;
+            box-shadow: 
+                inset 0 2px 4px rgba(0,0,0,0.5),
+                inset 0 -1px 2px rgba(255,255,255,0.05),
+                0 30px 70px rgba(0, 0, 0, 0.6);
+            pointer-events: none;
         }
 
         /* Watch Section */
@@ -740,18 +750,25 @@
                 height: 35px;
             }
 
+            .watch-screen-image {
+                width: 240px;
+                height: 240px;
+            }
+
+            .watch-bezel {
+                border-width: 10px;
+            }
+
             .watch-crown {
-                margin-top: -36px;
+                right: 6px;
                 height: 28px;
                 width: 8px;
-                right: -10px;
             }
 
             .watch-push-button {
-                margin-top: 4px;
+                right: 8px;
                 height: 16px;
                 width: 6px;
-                right: -8px;
             }
 
             .watch-features {
@@ -1537,6 +1554,7 @@
                         <div class="watch-crown"></div>
                         <div class="watch-push-button"></div>
                         <img src="watch-screenshot.png" alt="GroqBoard on Wear OS" class="watch-screen-image">
+                        <div class="watch-bezel"></div>
                     </div>
                     <div class="watch-band-bottom"></div>
                 </div>
