--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>GroqBoard - AI Voice Keyboard | Lightning-Fast Speech-to-Text</title>
     <meta name="description" content="Transform your typing with GroqBoard. AI-powered voice keyboard using Groq's Whisper technology. Bilingual support, custom vocabulary, privacy-first.">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://play-lh.googleusercontent.com/vUOMqqK6EwJV11uak0phYo5sMmTLYl2fB1Joh_SaLukbKyA13CFMbYGrp24RzTgiArwp1nL8GhItWpkclGwsIg=s64" sizes="64x64">
+    <link rel="icon" type="image/png" href="https://play-lh.googleusercontent.com/vUOMqqK6EwJV11uak0phYo5sMmTLYl2fB1Joh_SaLukbKyA13CFMbYGrp24RzTgiArwp1nL8GhItWpkclGwsIg=s32" sizes="32x32">
+    <link rel="apple-touch-icon" href="https://play-lh.googleusercontent.com/vUOMqqK6EwJV11uak0phYo5sMmTLYl2fB1Joh_SaLukbKyA13CFMbYGrp24RzTgiArwp1nL8GhItWpkclGwsIg=s180">
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
