--- a/index.html
+++ b/index.html
@@ -1857,8 +1857,8 @@
     <section class="cta">
         <div class="cta-container">
             <h2><span data-en="Ready to Type" data-es="¿Listo para Escribir">Ready to Type</span> <span class="gradient-text" data-en="Faster" data-es="Más Rápido">Faster</span>?</h2>
-            <p data-en="Join thousands of users who've transformed their mobile typing experience. Download GroqBoard today and experience the future of voice input." data-es="Únete a miles de usuarios que han transformado su experiencia de escritura móvil. Descarga GroqBoard hoy y experimenta el futuro del dictado por voz.">
-                Join thousands of users who've transformed their mobile typing experience. Download GroqBoard today and experience the future of voice input.
+            <p data-en="Join hundreds of users who've transformed their mobile typing experience. Download GroqBoard today and experience the future of voice input." data-es="Únete a cientos de usuarios que han transformado su experiencia de escritura móvil. Descarga GroqBoard hoy y experimenta el futuro del dictado por voz.">
+                Join hundreds of users who've transformed their mobile typing experience. Download GroqBoard today and experience the future of voice input.
             </p>
             <div class="cta-buttons">
                 <a href="https://play.google.com/store/apps/details?id=com.alegol.groqboard" class="play-store-btn" target="_blank">
@@ -1892,7 +1892,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p data-en="© 2025 GroqBoard. All rights reserved. Android is a trademark of Google LLC." data-es="© 2025 GroqBoard. Todos los derechos reservados. Android es una marca registrada de Google LLC.">© 2025 GroqBoard. All rights reserved. Android is a trademark of Google LLC.</p>
+            <p data-en="© 2026 GroqBoard. All rights reserved. Android is a trademark of Google LLC." data-es="© 2026 GroqBoard. Todos los derechos reservados. Android es una marca registrada de Google LLC.">© 2025 GroqBoard. All rights reserved. Android is a trademark of Google LLC.</p>
         </div>
     </footer>
 
